<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Activity.RegistrationActivity">

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_above="@id/layoutProgressBar"-->
    <!--        android:scrollbars="none">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgMain"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/register_logo"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textColor="@color/secondary_color"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_register"
            android:textAlignment="center"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/layoutProgressBar"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/name"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:startIconDrawable="@drawable/outline_person_24"
                        app:startIconTint="@color/primary_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/email"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:startIconDrawable="@drawable/outline_email_24"
                        app:startIconTint="@color/primary_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/mobile"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:startIconDrawable="@drawable/outline_phone_24"
                        app:startIconTint="@color/primary_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:text="Select Country"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/spinnerCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/border_spinner"
                        android:padding="10dp"
                        android:popupBackground="@color/white"
                        android:spinnerMode="dropdown" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:text="Select City"
                        android:textColor="@color/black"
                        android:visibility="gone" />

                    <Spinner
                        android:id="@+id/spinnerCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/border_spinner"
                        android:padding="10dp"
                        android:popupBackground="@color/white"
                        android:spinnerMode="dropdown"
                        android:visibility="gone" />

                    <!-- <Spinner
                         android:id="@+id/spinnerChapter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="20dp"
                         android:layout_marginTop="16dp"
                         android:background="@drawable/border_spinner"
                         android:padding="15dp"
                         android:popupBackground="@color/white"
                         android:spinnerMode="dropdown" />-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etReferralCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:hint="Referral Code"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:startIconDrawable="@drawable/outline_members_24"
                        app:startIconTint="@color/primary_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/password"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:startIconDrawable="@drawable/baseline_lock"
                        app:startIconTint="@color/primary_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/confirm_password"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:startIconDrawable="@drawable/baseline_lock"
                        app:startIconTint="@color/primary_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- <TextView
                        android:id="@+id/tvAddKeyWords"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Add Keywords"
                         android:textColor="@color/black"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:layout_marginTop="8dp"
                         />-->


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="12dp"
                        android:paddingHorizontal="60dp"
                        android:text="@string/register_text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_have_an_account"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/tvLogIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/log_in"
                            android:textAlignment="center"
                            android:textColor="@color/primary_color"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <!--    </ScrollView>-->

    <!--<ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />-->

    <FrameLayout
        android:id="@+id/layoutProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/black"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_indeternimate" />

    </FrameLayout>

</RelativeLayout>